Mapeo de la pagina de kinal

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <li class="nav-item mx-3">
                     <a class="nav-link active" aria-current="page">Inicio</a>
                 </li>
-                <li class="nav-item mx-3">
+                <li class="nav-item mx-3 ">
                     <a class="nav-link" href="#">Kinal</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-3 me-5" aria-disabled="true"
+                <li class="nav-item mx-3 me-5 ">
+                    <a class="nav-link" aria-disabled="true"
                         href="assets/pages/portafolio.html">Portafolio</a>
                 </li>
             </ul>
@@ -49,7 +49,7 @@
 
 
     <div class="container py-5">
-        <div class="row">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
             <div class="col align-self-center">
                 <h2 class="mb-3 text-end">¿Porque me gustan?</h2>
                 <p class="text-end">
@@ -67,7 +67,7 @@
     </div>
 
     <div class="container my-5">
-        <div class="row">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
             <div class="col align-self-center px-5">
                 <img src="assets/images/002.jpg"" class=" img-thumbnail" alt="...">
             </div>
@@ -84,9 +84,9 @@
     </div>
     <div class="container py-5">
         <h2 class="text-center">Juegos favoritos</h2>
-        <div class="row row-cols-1 row-cols-md-1 row-cols-lg-3  g-5">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-5">
             <div class="col">
-                <div class="card">
+                <div class="card border border-0 shadow-lg">
                     <img src="assets/images/003.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Marvel's Spider-Man 2</h5>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card border border-0 shadow-lg">
                     <img src="assets/images/002.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Fortnite: Battle Royale</h5>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card border border-0 shadow-lg">
                     <img src="assets/images/004.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Call of Duty: Modern Warfare 3</h5>
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card border border-0 shadow-lg">
                     <img src="assets/images/006.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Cyberpunk 2077</h5>
@@ -130,7 +130,7 @@
             </div>
 
             <div class="col">
-                <div class="card">
+                <div class="card border border-0 shadow-lg">
                     <img src="assets/images/007.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Mortal Kombat 1</h5>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card border border-0 shadow-lg">
                     <img src="assets/images/008.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Gran Turismo 7</h5>
