Completacion de pagina principal de kinal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link active" aria-current="page">Inicio</a>
                 </li>
                 <li class="nav-item mx-3 ">
-                    <a class="nav-link" href="#">Kinal</a>
+                    <a class="nav-link" href="assets/pages/kinal.html">Kinal</a>
                 </li>
                 <li class="nav-item mx-3 me-5 ">
                     <a class="nav-link" aria-disabled="true"
@@ -42,11 +42,7 @@
 
     <div class="fondo-pres d-flex justify-content-center align-items-center">
         <h1 class="text-white subrayado animate__animated animate__pulse animate__slow">Video juegos</h1>
-
     </div>
-
-
-
 
     <div class="container py-5">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
@@ -82,6 +78,7 @@
             </div>
         </div>
     </div>
+    
     <div class="container py-5">
         <h2 class="text-center">Juegos favoritos</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-5">
@@ -155,7 +152,7 @@
 
     </div>
 
-    <footer class="fondo text-light text-center py-3">
+    <footer class="active text-light text-center py-3">
         <div class="container">
             <p>&copy; 2024 Angel Kaled Rodriguez Soc. Todos los derechos reservados.</p>
         </div>
