--- a/assets/pages/kinal.html
+++ b/assets/pages/kinal.html
@@ -1,94 +1,301 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cursos Técnicos | Fundación Kinal | Guatemala</title>
-    <link rel="shortcut icon" href="/assets/images/faviconkinal.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/assets/styles/kinal.css">
+  <link rel="shortcut icon" href="/assets/images/faviconkinal.png" type="image/x-icon">
+  <title>Cursos Técnicos | Fundación Kinal | Guatemala</title>
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <div class="collapse navbar-collapse justify-content-md-center" id="navbarSupportedContent">
+        <img src="/assets/images/iconkinal.jpg" height="62" alt="">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item mx-3">
+            <a class="nav-link " aria-current="page" href="/index.html">INICIO</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+          <li class="nav-item mx-3">
+            <a class="nav-link" href="#">QUIÉNES SOMOS</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+          <li class="nav-item mx-3">
+            <a class="nav-link" href="#">EDUCACIÓN</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <li class="nav-item mx-3">
+            <a class="nav-link" href="#">EDUCACIÓN</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link">SPONSORS</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link">TRABAJOS</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link">BLOG</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
 
-    <ul class="nav sticky-top justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/assets/images/slide1.jpeg" class="w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/assets/images/slide2.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div>
 
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    <h1>Hello, world!</h1>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+  <div class="container my-5">
+    <div class="row gx-5">
+      <div class="col align-self-center">
+        <h1 class="">Sobre Kinal</h1>
+        <hr>
+        <p class="cont-let ">Kinal es un Centro Educativo privado, no lucrativo, dirigido a la formación
+          técnica profesional de jóvenes y
+          adultos, de beneficio colectivo y asistencia social en favor de los sectores más necesitados de la comunidad.
+          <br>
+          Nuestro valor fundamental es enseñar a realizar el trabajo bien hecho, que sea la
+          base de la
+          superación de alumnos y el medio para servir a los demás.
+        </p>
+      </div>
+      <div class="col">
+        <img src="/assets/images/009.jpg" class="rounded" alt="">
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid bg-blue py-5">
+    <h2 class="text-center text-white">Hechos importantes</h2>
+    <div class="container  py-5">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  text-center">
+        <div class="col">
+          <div class="card w-75" style="height: 10rem;">
+            <div class="card-body  d-flex align-items-center">
+              <h1 class="carta-titulo">25k</h1>
+              <p class="card-text">ESCUELA TÉCNICA</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-75" style="height: 10rem;">
+            <div class="card-body  d-flex align-items-center">
+              <h1 class="carta-titulo">1500</h1>
+              <p class="card-text">CICLO BÁSICO</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-75" style="height: 10rem;">
+            <div class="card-body  d-flex align-items-center">
+              <h1 class="carta-titulo">6k</h1>
+              <p class="card-text">CICLO DIVERSIFICADO</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card w-75" style="height: 10rem;">
+            <div class="card-body  d-flex align-items-center">
+              <h1 class="card-title">31.5K</h1>
+              <p class="card-text">ESTUDIANTES TOTAL</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="container py-5">
+    <h1 class="text-center">Metas</h1>
+    <div class="row">
+      <div class="col">
+        <ul class="list-group text-center">
+          <li class="list-group-item active" aria-current="true">Misión</li>
+          <li class="list-group-item">
+            <p> Formar a jóvenes y adultos a
+              través de una educación integral, con énfasis en las áreas técnicas y tecnológicas, influyendo
+              positivamente en su trabajo, su familia y la sociedad.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="list-group text-center">
+          <li class="list-group-item active" aria-current="true">Visión</li>
+          <li class="list-group-item">
+            <p>Ser líderes en la formación técnica, tecnológica y humana
+              de la región, brindando una excelente preparación integral a jóvenes y adultos, logrando su superación
+              personal y profesional.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="list-group text-center border border-0">
+          <li class="list-group-item active" aria-current="true">Valores</li>
+          <li class="list-group-item"> • Visión cristiana de la vida. <br>
+            • Respeto a la dignidad de la
+            persona. <br>
+            • Espíritu de servicio. <br>
+            • Trabajo bien hecho. <br>
+            • Libertad personal responsable.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div data-aos="zoom-in" class="container w-50 py-5">
+
+  </div>
+
+  <div data-aos="fade-left" class="container">
+
+    <h1 class="text-center">Grados</h1>
+    <div class="card-group">
+      <div class="card border border-0 mx-5">
+        <img src="/assets/images/card-img-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"> <img src="/assets/images/card-title-1.png" alt=""> </h5>
+          <p class="card-text text-center">Kinal ofrece su programa de Educación General Básica para todos aquellos
+            jóvenes que
+            buscan una orientación técnica y excelencia académica.</p>
+        </div>
+      </div>
+      <div class="card border border-0 mx-5">
+        <img src="/assets/images/card-img-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"> <img src="/assets/images/card-title-2.png" alt=""> </h5>
+          <p class="card-text text-center">Durante 3 años se prepara al joven de forma técnica y académica, el egresado
+            estará listo trabajar en el ramo técnico de la especialidad que eligió estudiar; el título obtenido le
+            permitirá ingresar a la universidad.</p>
+        </div>
+      </div>
+      <div class="card border border-0  mx-5">
+        <img src="/assets/images/card-img-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"> <img src="/assets/images/card-title-3.png" alt=""> </h5>
+          <p class="card-text text-center">Contamos con más de 30 especialidades técnicas y tecnológicas que pueden
+            favorecer tu crecimiento y/o tu inserción laboral.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container py-5">
+    <div class="card-group">
+      <div class="card border border-0 align-items-center mx-5">
+        <img src="/assets/images/card-img-4.png" class="card-img-top" style="width:25rem;" alt="...">
+        <div class="card-body text-center">
+          <h5 class="card-title">Programas para tu negocio</h5>
+          <p class="card-text text-center">Durante 3 años se prepara al joven de forma técnica y académica, el egresado
+            estará listo trabajar en el ramo técnico de la especialidad que eligió estudiar; el título obtenido le
+            permitirá ingresar a la universidad.</p>
+        </div>
+      </div>
+      <div class="card border border-0 align-items-center mx-5">
+        <img src="/assets/images/card-img-5.png" class="" style="width:25rem;" alt="...">
+        <div class="card-body text-center">
+          <h5 class="card-title">Técnicos Universitarios</h5>
+          <p class="card-text text-center">Dirigido al fortalecimiento de mandos medios y especialmente aquellos que han
+            cursado una carrera técnica y desean continuar con estudios a nivel universitario. Estos estudios son
+            avalados por la Universidad del Istmo.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container px-4 text-center">
+    <div class="row gx-5">
+      <div class="col">
+        <div class="p-3">Custom column padding</div>
+      </div>
+      <div class="col">
+        <div class="p-3">Custom column padding</div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="row mt-5 gx-5">
+      <div class="col">
+        <h1>Contáctanos</h1>
+        <div class="mb-3">
+          <label for="name" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Correo electronico</label>
+          <input type="email" class="form-control" id="email">
+        </div>
+        <div class="mb-3">
+          <label for="telefono" class="form-label">Número de Teléfono</label>
+          <input type="tel" class="form-control" id="telefono">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button class="btn btn-primary"> Enviar </button>
+      </div>
+      <div class="col d-flex justify-content-end">
+        <img src="/assets/images/010.png" class=" " height="500">
+      </div>
+
+    </div>
+
+  </div>
+
+
+
+
+  <footer class="d-flex justify-content-around align-items-center p-3 ">
+    <div class="col-md-4 d-flex align-items-center">
+      <p class="text-white fs-bold fs-5">© 2024 Fundacion Kinal, Org</p>
+    </div>
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"> <a
+          href="https://l.facebook.com/l.php?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D%252B50250531936%26data%3DARAkWudjsGFQ3_GhAJBN7gs3f6p8fCnv7_10l2I1E8hAEFd7HPZhfrv0cXUxq_IXmz_DlejrrTO23OEqG64Oi9e36AlrZhWz8_qV2KLkS6STv-opXY3H9NFHv3b-ByiAptjJED_YmMgfFR04GwLEiKm9PA%26source%3DFB_Page%26app%3Dfacebook%26entry_point%3Dpage_cta%26fbclid%3DIwAR1ucB7ed3iTHpvoZkT9FAyknvcJ6OsqOVamuAo1Z4vB1DeO-x-tIDg8Sn0&h=AT2MiBPZReEvbgvI7d2jqrhLKjoJoI8tfr6DiLD0bIsQsP0TMBlV2Imd9u8IO0FezKBRWQEGErY7OhYZdYsG79g-9K3oYRRGeCdFqH-uzNlXqyJAHPYk5-euqV985_0CN72Gog"><i
+            class="fa-brands fa-whatsapp fa-xl" style="color: #ffffff;"></i></a></li>
+      <li class="ms-3"> <a href="https://www.facebook.com/kinal.gt"><i class="fa-brands fa-facebook fa-xl"
+            style="color: #ffffff;"></i></a> </li>
+      <li class="ms-3"> <a href="https://www.instagram.com/fundacionkinal/"><i class="fa-brands fa-instagram fa-xl"
+            style="color: #ffffff;"></i></a> </li>
+
+    </ul>
+  </footer>
+
+  <script src="https://kit.fontawesome.com/2833bb8570.js" crossorigin="anonymous"></script>
+  <script src="/assets/scripts/kinal.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
